--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
           class="rounded mb-4 w-full h-48 object-cover">
         <h3 class="text-xl font-semibold mb-2">Picture Description</h3>
         <p class="mb-4">Belajar mendeskripsikan gambar dalam bahasa Inggris.</p>
-        <a href="materi-speaking.html"
+        <a href="picture.html"
           class="inline-block bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
       <div class="bg-white rounded shadow hover:shadow-lg transition p-4 border border-purple-200">
         <img src="https://via.placeholder.com/400x200?text=Listening+Skills" alt="Listening Skills"
           class="rounded mb-4 w-full h-48 object-cover">
-        <h3 class="text-xl font-semibold mb-2">Listening Skills</h3>
+        <h3 class="text-xl font-semibold mb-2">Writing Skills</h3>
         <p class="mb-4">Memahami percakapan dasar bahasa Inggris.</p>
-        <a href="materi-listening.html"
+        <a href="writing.html"
           class="inline-block bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
       <div class="bg-white rounded shadow hover:shadow-lg transition p-4 border border-purple-200">
@@ -97,7 +97,7 @@
           class="rounded mb-4 w-full h-48 object-cover">
         <h3 class="text-xl font-semibold mb-2">Reading Skills</h3>
         <p class="mb-4">Meningkatkan kemampuan membaca bahasa Inggris.</p>
-        <a href="materi-reading.html"
+        <a href="reading.html"
           class="inline-block bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
     </div>
