--- a/reading.html
+++ b/reading.html
@@ -32,17 +32,17 @@
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col items-center">
         <img src="https://via.placeholder.com/400x200?text=Reading+Topic+1" alt="Reading Topic 1" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">Reading Topic 1 <span id="progress-reading1" class="text-green-600 text-sm"></span></h3>
-        <a href="/course/reading1.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
+        <a href="/course/juwita/reading1.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col items-center">
         <img src="https://via.placeholder.com/400x200?text=Reading+Topic+2" alt="Reading Topic 2" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">Reading Topic 2 <span id="progress-reading2" class="text-green-600 text-sm"></span></h3>
-        <a href="/course/reading2.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
+        <a href="/course/juwita/reading2.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col items-center">
         <img src="https://via.placeholder.com/400x200?text=Reading+Topic+3" alt="Reading Topic 3" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">Reading Topic 3 <span id="progress-reading3" class="text-green-600 text-sm"></span></h3>
-        <a href="/course/reading3.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
+        <a href="/course/juwita/reading3.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
     </section>
 
