--- a/writing.html
+++ b/writing.html
@@ -32,12 +32,12 @@
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col items-center">
         <img src="https://via.placeholder.com/400x200?text=Writing+Topic+1" alt="Writing Topic 1" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">Writing Topic 1 <span id="progress-writing1" class="text-green-600 text-sm"></span></h3>
-        <a href="/course/writing1.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
+        <a href="/course/juwita/writing1.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col items-center">
         <img src="https://via.placeholder.com/400x200?text=Writing+Topic+2" alt="Writing Topic 2" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">Writing Topic 2 <span id="progress-writing2" class="text-green-600 text-sm"></span></h3>
-        <a href="/course/writing2.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
+        <a href="/course/juwita/writing2.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
     </section>
 
