--- a/picture.html
+++ b/picture.html
@@ -32,22 +32,22 @@
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col items-center">
         <img src="https://via.placeholder.com/400x200?text=School" alt="School" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">School <span id="progress-school" class="text-green-600 text-sm"></span></h3>
-        <a href="course/school.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
+        <a href="course/juwita/school.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col items-center">
         <img src="https://via.placeholder.com/400x200?text=Market" alt="Market" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">Market <span id="progress-market" class="text-green-600 text-sm"></span></h3>
-        <a href="/course/market.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
+        <a href="/course/juwita/market.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col items-center">
         <img src="https://via.placeholder.com/400x200?text=Family" alt="Family" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">Family <span id="progress-family" class="text-green-600 text-sm"></span></h3>
-        <a href="/course/family.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
+        <a href="/course/juwita/family.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col items-center">
         <img src="https://via.placeholder.com/400x200?text=Flower+Garden" alt="Flower Garden" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">Flower Garden <span id="progress-flower-garden" class="text-green-600 text-sm"></span></h3>
-        <a href="/course/flower-garden.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
+        <a href="/course/juwita/flower-garden.html" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-900 transition">Mulai</a>
       </div>
     </section>
 
