--- a/picture.html
+++ b/picture.html
@@ -49,25 +49,25 @@
         <img src="https://via.placeholder.com/400x200?text=School" class="rounded mb-4 w-full h-40 object-cover" alt="School">
         <h3 class="text-xl font-semibold mb-2">School <span id="progress-school" class="text-green-600 text-sm"></span></h3>
         <p class="flex-grow">Belajar mendeskripsikan lingkungan sekolah dalam bahasa Inggris.</p>
-        <a href="school.html" class="inline-flex justify-center items-center mt-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white px-4 py-2 rounded-full shadow hover:opacity-90 transition">Lihat Materi</a>
+        <a href="/juwita/course/school.html" class="inline-flex justify-center items-center mt-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white px-4 py-2 rounded-full shadow hover:opacity-90 transition">Lihat Materi</a>
       </div>
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col">
         <img src="https://via.placeholder.com/400x200?text=Market" class="rounded mb-4 w-full h-40 object-cover" alt="Market">
         <h3 class="text-xl font-semibold mb-2">Market <span id="progress-market" class="text-green-600 text-sm"></span></h3>
         <p class="flex-grow">Belajar mendeskripsikan suasana pasar dengan bahasa Inggris.</p>
-        <a href="market.html" class="inline-flex justify-center items-center mt-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white px-4 py-2 rounded-full shadow hover:opacity-90 transition">Lihat Materi</a>
+        <a href="/juwita/course/market.html" class="inline-flex justify-center items-center mt-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white px-4 py-2 rounded-full shadow hover:opacity-90 transition">Lihat Materi</a>
       </div>
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col">
         <img src="https://via.placeholder.com/400x200?text=Family" class="rounded mb-4 w-full h-40 object-cover" alt="Family">
         <h3 class="text-xl font-semibold mb-2">Family <span id="progress-family" class="text-green-600 text-sm"></span></h3>
         <p class="flex-grow">Belajar mendeskripsikan keluarga dan kegiatan di rumah.</p>
-        <a href="family.html" class="inline-flex justify-center items-center mt-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white px-4 py-2 rounded-full shadow hover:opacity-90 transition">Lihat Materi</a>
+        <a href="/juwita/course/family.html" class="inline-flex justify-center items-center mt-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white px-4 py-2 rounded-full shadow hover:opacity-90 transition">Lihat Materi</a>
       </div>
       <div class="bg-white rounded shadow p-4 border border-purple-200 flex flex-col">
         <img src="https://via.placeholder.com/400x200?text=Flower+Garden" class="rounded mb-4 w-full h-40 object-cover" alt="Flower Garden">
         <h3 class="text-xl font-semibold mb-2">Flower Garden <span id="progress-flower-garden" class="text-green-600 text-sm"></span></h3>
         <p class="flex-grow">Belajar mendeskripsikan taman bunga menggunakan kalimat bahasa Inggris.</p>
-        <a href="flower-garden.html" class="inline-flex justify-center items-center mt-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white px-4 py-2 rounded-full shadow hover:opacity-90 transition">Lihat Materi</a>
+        <a href="/juwita/course/flower-garden.html" class="inline-flex justify-center items-center mt-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white px-4 py-2 rounded-full shadow hover:opacity-90 transition">Lihat Materi</a>
       </div>
     </section>
 
