--- a/katalog.html
+++ b/katalog.html
@@ -34,21 +34,21 @@
     <!-- List Kursus -->
     <section class="grid md:grid-cols-3 gap-6 inline-block">
       <div class="bg-white rounded shadow hover:scale-105 transition-transform duration-300 p-4 border border-purple-200 flex flex-col">
-        <img src="https://via.placeholder.com/400x200?text=Picture+Description" alt="Picture" class="rounded mb-4 w-full h-40 object-cover">
+        <img src="https://cdn.pixabay.com/photo/2017/10/18/11/14/books-2863724_1280.jpg" alt="Picture" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">Picture Description <span id="progress-picture" class="text-green-600 text-sm"></span></h3>
         <p class="flex-grow">Belajar mendeskripsikan gambar dalam bahasa Inggris dengan berbagai tema.</p>
         <a href="picture.html" class="inline-block mt-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white text-center px-4 py-2 rounded-full shadow hover:opacity-90 transition">Lihat Materi</a>
       </div>
 
       <div class="bg-white rounded shadow hover:scale-105 transition-transform duration-300 p-4 border border-purple-200 flex flex-col">
-        <img src="https://via.placeholder.com/400x200?text=Reading" alt="Reading" class="rounded mb-4 w-full h-40 object-cover">
+        <img src="https://cdn.pixabay.com/photo/2014/03/12/18/45/boys-286245_960_720.jpg" alt="Reading" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">Reading <span id="progress-reading" class="text-green-600 text-sm"></span></h3>
         <p class="flex-grow">Latihan memahami teks berbahasa Inggris dengan berbagai tema sederhana.</p>
         <a href="reading.html" class="mt-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white px-4 py-2 text-center rounded-full shadow hover:opacity-90 transition">Lihat Materi</a>
       </div>
 
       <div class="bg-white rounded shadow hover:scale-105 transition-transform duration-300 p-4 border border-purple-200 flex flex-col">
-        <img src="https://via.placeholder.com/400x200?text=Writing" alt="Writing" class="rounded mb-4 w-full h-40 object-cover">
+        <img src="https://cdn.pixabay.com/photo/2021/03/08/20/14/child-6080185_1280.jpg" alt="Writing" class="rounded mb-4 w-full h-40 object-cover">
         <h3 class="text-xl font-semibold mb-2">Writing <span id="progress-writing" class="text-green-600 text-sm"></span></h3>
         <p class="flex-grow">Latihan menulis kalimat dan paragraf bahasa Inggris yang benar.</p>
         <a href="writing.html" class="mt-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white px-4 text-center py-2 rounded-full shadow hover:opacity-90 transition">Lihat Materi</a>
