--- a/forum.html
+++ b/forum.html
@@ -156,7 +156,7 @@
       "Dapet insight baru tiap kelas, mantap 🔥"
     ];
 
-    const names = ["Budi", "Ani", "Dewi", "Rian", "Maya", "Fajar", "Zahra", "Rizky"];
+    const names = ["mantapu", "Salim","Rudi", "Ani", "Dewi", "Rian", "Maya", "Fajar", "Zarco", "salkim", "Salim", "Rizky"];
 
     function parseEmoji(text) {
       for (const code in emojiMap) {
