--- a/kuis.html
+++ b/kuis.html
@@ -1,39 +1,94 @@
-<!-- === KUIS: Vygotsky === -->
+<!-- === KUIS TERPADU UNTUK SEMUA TEORI === -->
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kuis Vygotsky</title>
+  <title>Kuis Teori Pembelajaran</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800">
-  <main class="max-w-3xl mx-auto py-12 px-6">
-    <h2 class="text-2xl font-bold mb-6 text-purple-700">Kuis Vygotsky</h2>
-    <form id="quizForm" class="space-y-6">
-      <div>
-        <p>1. Apa itu ZPD?</p>
-        <label><input type="radio" name="q1" value="1"> Zona Pengembangan Proksimal</label><br>
-        <label><input type="radio" name="q1" value="0"> Zona Proyeksi Digital</label>
+  <main class="max-w-5xl mx-auto py-12 px-6">
+    <h1 class="text-3xl font-bold text-purple-700 mb-8 text-center">Kuis Teori Pembelajaran</h1>
+    <form id="masterQuiz" class="space-y-8">
+
+      <!-- PILIHAN GANDA -->
+      <h2 class="text-xl font-semibold text-indigo-700">Bagian 1: Pilihan Ganda</h2>
+      <div class="space-y-4">
+        <div>
+          <p>1. Apa prinsip utama teori Vygotsky?</p>
+          <label><input type="radio" name="q1" value="1"> Interaksi sosial</label><br>
+          <label><input type="radio" name="q1" value="0"> Hafalan mandiri</label>
+        </div>
+        <div>
+          <p>2. Menurut Piaget, tahap operasional formal terjadi pada usia?</p>
+          <label><input type="radio" name="q2" value="1"> 11 tahun ke atas</label><br>
+          <label><input type="radio" name="q2" value="0"> 3–5 tahun</label>
+        </div>
+        <div>
+          <p>3. Dual-channel dalam teori Mayer artinya?</p>
+          <label><input type="radio" name="q3" value="1"> Visual dan audio bersamaan</label><br>
+          <label><input type="radio" name="q3" value="0"> Dua guru sekaligus</label>
+        </div>
+        <div>
+          <p>4. Apa yang dimaksud intrinsic load menurut Sweller?</p>
+          <label><input type="radio" name="q4" value="1"> Kompleksitas materi</label><br>
+          <label><input type="radio" name="q4" value="0"> Gangguan suara luar</label>
+        </div>
+        <div>
+          <p>5. Tahap belajar aktif menurut Piaget disebut?</p>
+          <label><input type="radio" name="q5" value="1"> Tahap operasional konkret</label><br>
+          <label><input type="radio" name="q5" value="0"> Tahap pasif reflektif</label>
+        </div>
       </div>
-      <div>
-        <p>2. Apa peran scaffolding?</p>
-        <label><input type="radio" name="q2" value="1"> Memberi dukungan belajar sementara</label><br>
-        <label><input type="radio" name="q2" value="0"> Menilai hasil belajar akhir</label>
+
+      <!-- ESSAY -->
+      <h2 class="text-xl font-semibold text-indigo-700 mt-10">Bagian 2: Essay</h2>
+      <div class="space-y-4">
+        <div>
+          <label for="essay1">1. Jelaskan secara singkat apa itu ZPD dalam teori Vygotsky.</label>
+          <textarea id="essay1" name="essay1" rows="3" class="w-full border rounded p-2"></textarea>
+        </div>
+        <div>
+          <label for="essay2">2. Berikan contoh kegiatan belajar yang sesuai dengan tahap praoperasional.</label>
+          <textarea id="essay2" name="essay2" rows="3" class="w-full border rounded p-2"></textarea>
+        </div>
+        <div>
+          <label for="essay3">3. Bagaimana cara guru mengurangi extraneous load dalam presentasi materi?</label>
+          <textarea id="essay3" name="essay3" rows="3" class="w-full border rounded p-2"></textarea>
+        </div>
+        <div>
+          <label for="essay4">4. Mengapa penggunaan multimedia (gambar + suara) bisa meningkatkan pemahaman menurut Mayer?</label>
+          <textarea id="essay4" name="essay4" rows="3" class="w-full border rounded p-2"></textarea>
+        </div>
+        <div>
+          <label for="essay5">5. Jelaskan hubungan antara konstruktivisme dan keterlibatan siswa dalam pembelajaran.</label>
+          <textarea id="essay5" name="essay5" rows="3" class="w-full border rounded p-2"></textarea>
+        </div>
       </div>
-      <button type="submit" class="bg-purple-700 text-white px-4 py-2 rounded hover:bg-purple-800">Submit</button>
+
+      <!-- SUBMIT -->
+      <div class="text-center mt-10">
+        <button type="submit" class="bg-purple-700 text-white px-6 py-3 rounded hover:bg-purple-800">Kumpulkan Jawaban</button>
+      </div>
     </form>
-    <div id="result" class="mt-6 font-semibold"></div>
   </main>
 
   <script>
-    document.getElementById("quizForm").addEventListener("submit", function(e) {
+    document.getElementById("masterQuiz").addEventListener("submit", function(e) {
       e.preventDefault();
       const data = new FormData(this);
       let score = 0;
-      for (let val of data.values()) score += parseInt(val);
-      localStorage.setItem("hasilKuis", score);
-window.location.href = "hasil.html";
+      for (let i = 1; i <= 5; i++) {
+        score += parseInt(data.get("q" + i)) || 0;
+      }
+      const essayAnswers = [];
+      for (let j = 1; j <= 5; j++) {
+        essayAnswers.push(data.get("essay" + j));
+      }
+      localStorage.setItem("kuisScore", score);
+      localStorage.setItem("essayAnswers", JSON.stringify(essayAnswers));
+      window.location.href = "hasil.html";
     });
   </script>
 </body>
