--- a/hasil.html
+++ b/hasil.html
@@ -12,8 +12,8 @@
   <main class="max-w-4xl mx-auto py-16 px-6 text-center">
     <h1 class="text-4xl font-bold text-purple-700 mb-6">🎉 Selamat! 🎉</h1>
     <p class="text-lg mb-4">Skor Pilihan Ganda: <span id="score" class="font-semibold text-green-600"></span> / 5</p>
-    <h2 class="text-2xl font-semibold mt-8 text-indigo-700 mb-4">Jawaban Essay:</h2>
-    <ol class="list-decimal space-y-4 text-left max-w-3xl mx-auto text-gray-700" id="essayList"></ol>
+    <h2 class="text-2xl font-semibold mt-8 text-white-700 mb-4">Jawaban Essay:</h2>
+    <ol class="list-decimal space-y-4 text-left max-w-3xl mx-auto text-white-700" id="essayList"></ol>
 
     <a href="index.html" class="mt-10 inline-block bg-purple-700 text-white px-6 py-3 rounded hover:bg-purple-800 transition">Kembali ke Beranda</a>
   </main>
