--- a/index.html
+++ b/index.html
@@ -188,6 +188,31 @@
     </div>
   </section>
 
+  <!-- SECTION: FITUR lainnya -->
+  <section class="py-16 px-4 bg-white">
+    <div class="max-w-5xl mx-auto text-center space-y-10">
+      <h2 class="text-3xl font-bold text-purple-700">Fitur Penting</h2>
+      <div class="grid md:grid-cols-4 gap-8 text-left">
+        <div class="space-y-2">
+          <h3 class="font-semibold text-lg text-indigo-600">assessment</h3>
+          <p class="text-sm">Semua pembelajaran dilakukan langsung lewat Zoom untuk interaksi real-time antara pengajar dan peserta.</p>
+        </div>
+        <div class="space-y-2">
+          <h3 class="font-semibold text-lg text-indigo-600">Tips Belajar</h3>
+          <p class="text-sm">Akses jadwal kelas secara teratur dan link Zoom langsung di platform ini.</p>
+        </div>
+        <div class="space-y-2">
+          <h3 class="font-semibold text-lg text-indigo-600">Materi belajar</h3>
+          <p class="text-sm">Tempat peserta berbagi pengalaman dan berdiskusi setelah kelas selesai.</p>
+        </div>
+        <div class="space-y-2">
+          <h3 class="font-semibold text-lg text-indigo-600">Pengajar</h3>
+          <p class="text-sm">Tempat peserta berbagi pengalaman dan berdiskusi setelah kelas selesai.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- CTA SECTION -->
   <section class="py-16 px-4 bg-gradient-to-r from-purple-700 to-indigo-700 text-white text-center">
     <div class="max-w-xl mx-auto space-y-4">
