--- a/index.html
+++ b/index.html
@@ -189,29 +189,51 @@
   </section>
 
   <!-- SECTION: FITUR lainnya -->
-  <section class="py-16 px-4 bg-white">
-    <div class="max-w-5xl mx-auto text-center space-y-10">
-      <h2 class="text-3xl font-bold text-purple-700">Fitur Penting</h2>
-      <div class="grid md:grid-cols-4 gap-8 text-left">
-        <div class="space-y-2">
-          <h3 class="font-semibold text-lg text-indigo-600">assessment</h3>
-          <p class="text-sm">Semua pembelajaran dilakukan langsung lewat Zoom untuk interaksi real-time antara pengajar dan peserta.</p>
+<section class="py-16 px-4 bg-white">
+  <div class="max-w-6xl mx-auto text-center space-y-10">
+    <h2 class="text-3xl font-bold text-purple-700">Fitur Penting</h2>
+    <div class="grid md:grid-cols-4 gap-8 text-left">
+      
+      <!-- Card 1: Assessment -->
+      <div class="bg-gray-100 rounded-2xl p-6 shadow-md flex flex-col justify-between">
+        <div>
+          <h3 class="font-semibold text-lg text-indigo-600 mb-2">📝 Assessment</h3>
+          <p class="text-sm text-gray-700">Menguji pemahaman lewat kuis/asesmen singkat.</p>
         </div>
-        <div class="space-y-2">
-          <h3 class="font-semibold text-lg text-indigo-600">Tips Belajar</h3>
-          <p class="text-sm">Akses jadwal kelas secara teratur dan link Zoom langsung di platform ini.</p>
-        </div>
-        <div class="space-y-2">
-          <h3 class="font-semibold text-lg text-indigo-600">Materi belajar</h3>
-          <p class="text-sm">Tempat peserta berbagi pengalaman dan berdiskusi setelah kelas selesai.</p>
-        </div>
-        <div class="space-y-2">
-          <h3 class="font-semibold text-lg text-indigo-600">Pengajar</h3>
-          <p class="text-sm">Tempat peserta berbagi pengalaman dan berdiskusi setelah kelas selesai.</p>
-        </div>
+        <a href="assessment.html" class="mt-4 inline-block bg-purple-600 text-white px-4 py-2 rounded-xl text-sm hover:bg-purple-700">Akses Assessment</a>
       </div>
+
+      <!-- Card 2: Tips Belajar -->
+      <div class="bg-gray-100 rounded-2xl p-6 shadow-md flex flex-col justify-between">
+        <div>
+          <h3 class="font-semibold text-lg text-indigo-600 mb-2">💡 Tips Belajar</h3>
+          <p class="text-sm text-gray-700">Panduan belajar berdasarkan teori pembelajaran.</p>
+        </div>
+        <a href="tips.html" class="mt-4 inline-block bg-purple-600 text-white px-4 py-2 rounded-xl text-sm hover:bg-purple-700">Baca Tips</a>
+      </div>
+
+      <!-- Card 3: Materi Belajar PDF -->
+      <div class="bg-gray-100 rounded-2xl p-6 shadow-md flex flex-col justify-between">
+        <div>
+          <h3 class="font-semibold text-lg text-indigo-600 mb-2">📄 Materi Belajar (PDF)</h3>
+          <p class="text-sm text-gray-700">Unduh materi belajar lengkap sesuai teori pembelajaran.</p>
+        </div>
+        <a href="materi.html" class="mt-4 inline-block bg-purple-600 text-white px-4 py-2 rounded-xl text-sm hover:bg-purple-700">Lihat Materi</a>
+      </div>
+
+      <!-- Card 4: Tentang Pengajar -->
+      <div class="bg-gray-100 rounded-2xl p-6 shadow-md flex flex-col justify-between">
+        <div>
+          <h3 class="font-semibold text-lg text-indigo-600 mb-2">👩‍🏫 Pengajar</h3>
+          <p class="text-sm text-gray-700">Informasi tentang pembuat LMS ini.</p>
+        </div>
+        <a href="tentang.html" class="mt-4 inline-block bg-purple-600 text-white px-4 py-2 rounded-xl text-sm hover:bg-purple-700">Lihat Profil</a>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- CTA SECTION -->
   <section class="py-16 px-4 bg-gradient-to-r from-purple-700 to-indigo-700 text-white text-center">
