--- a/kuis.html
+++ b/kuis.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kuis Teori Pembelajaran</title>
+  <title>assessment Teori Pembelajaran</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800">
   <main class="max-w-5xl mx-auto py-12 px-6">
-    <h1 class="text-3xl font-bold text-purple-700 mb-8 text-center">Kuis Teori Pembelajaran</h1>
+    <h1 class="text-3xl font-bold text-purple-700 mb-8 text-center">assessment Teori Pembelajaran</h1>
     <form id="masterQuiz" class="space-y-8">
 
       <!-- PILIHAN GANDA -->
