--- a/tentang.html
+++ b/tentang.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tentang Pengajar</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tentang Saya</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Inter', sans-serif; }
+    .nav-active {
+      background-color: rgba(255, 255, 255, 0.95);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
+<body class="bg-white text-gray-800">
+
+<!-- NAVBAR -->
+  <nav id="navbar" class="bg-transparent backdrop-blur-md sticky top-0 z-50 transition-all duration-300">
+    <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
+      <a href="index.html" class="text-3xl font-extrabold text-purple-700 tracking-tight">DLMD</a>
+      <div class="hidden md:flex items-center space-x-6">
+        <a href="index.html" class="text-sm font-medium hover:text-purple-700 transition">Beranda</a>
+        <a href="dashboard.html" class="text-sm font-medium hover:text-purple-700 transition">Dashboard</a>
+        <a href="teori.html" class="text-sm font-medium hover:text-purple-700 transition">Teori</a>
+        <a href="forum.html" class="text-sm font-medium hover:text-purple-700 transition">Forum</a>
+        <a href="zoom.html" class="text-sm font-medium hover:text-purple-700 transition">Zoom</a>
+        <a href="about.html" class="text-sm font-semibold text-purple-700 border-b-2 border-purple-700">Tentang</a>
+        <input type="text" placeholder="Cari..." class="hidden lg:block border border-purple-300 rounded px-3 py-1 text-sm focus:outline-none focus:ring-2 focus:ring-purple-400">
+        <div class="relative">
+          <button id="userMenuBtn" class="text-sm font-medium text-gray-600 hover:text-purple-700">👤 User</button>
+          <div id="userMenu" class="hidden absolute right-0 mt-2 w-40 bg-white rounded shadow text-left z-50">
+            <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100">Profil</a>
+            <a href="#" class="block px-4 py-2 text-sm hover:bg-gray-100">Keluar</a>
+          </div>
+        </div>
+        <button id="darkModeToggle" class="ml-2 text-gray-600 hover:text-purple-700">🌙</button>
+      </div>
+      <button id="navToggle" class="md:hidden text-purple-700 focus:outline-none">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+    </div>
+    <div id="navMenu" class="md:hidden px-4 pb-4 hidden space-y-2">
+      <a href="index.html" class="block text-sm text-gray-700 hover:text-purple-700">Beranda</a>
+      <a href="dashboard.html" class="block text-sm text-gray-700 hover:text-purple-700">Dashboard</a>
+      <a href="teori.html" class="block text-sm text-gray-700 hover:text-purple-700">Teori</a>
+      <a href="forum.html" class="block text-sm text-gray-700 hover:text-purple-700">Forum</a>
+      <a href="zoom.html" class="block text-sm text-gray-700 hover:text-purple-700">Zoom</a>
+      <a href="about.html" class="block text-sm text-purple-700 font-semibold">Tentang</a>
+    </div>
+  </nav>
 
   <section class="max-w-4xl mx-auto p-8 mt-10 bg-white rounded-3xl shadow-xl">
     <div class="flex flex-col md:flex-row items-center gap-8">
