--- a/tentang.html
+++ b/tentang.html
@@ -61,7 +61,7 @@
       <!-- Info Pengajar -->
       <div>
         <h1 class="text-3xl font-bold text-purple-700 mb-2">👩‍🏫 Tentang Pengajar</h1>
-        <p class="text-lg font-semibold">Juwita Putri Ramadhani</p>
+        <p class="text-lg font-semibold">Juwita</p>
         <p class="text-sm text-gray-600">NPM: 238820XXXX · Kelas: IV-B</p>
         <p class="text-sm text-gray-600 mb-4">Program Studi Pendidikan Bahasa Inggris</p>
 
