--- a/tentang.html
+++ b/tentang.html
@@ -81,6 +81,15 @@
       <a href="tips.html" class="bg-pink-500 text-white px-6 py-2 rounded-xl hover:bg-pink-600 text-sm">💡 Tips Belajar</a>
     </div>
   </section>
+   <!-- FOOTER -->
+  <footer class="bg-gray-200 text-center py-4 mt-8 text-sm flex flex-col items-center gap-2">
+    <span>&copy; 2025 Digital Learning Media Development</span>
+    <div class="flex gap-3">
+      <a href="teori.html" class="text-purple-700 hover:underline">Landasan Teori</a>
+      <a href="zoom.html" class="text-purple-700 hover:underline">Jadwal Zoom</a>
+      <a href="forum.html" class="text-purple-700 hover:underline">Forum Diskusi</a>
+    </div>
+  </footer>
 
 </body>
 </html>
